Adding Tigre for test purpose

--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
-    <title>Covid-19 San Miguel</title>
+    <title>Covid-19</title>
     <meta
             name="description"
-            content="Informe sobre los casos de Covid-19 en San Miguel, Buenos Aires, Argentina."
+            content="Informe sobre los casos de Covid-19."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
